--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,8 @@ dependencies {
     compile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
     compile 'org.hibernate:hibernate-c3p0:4.3.5.Final'
     compile 'mysql:mysql-connector-java:5.1.21'
+
+    // Jackson
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
+
 }
